# AgentsForEarthFund

./: README.md
Earth Fund Grantee Agent Research/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.fly  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  fly.toml  requirements.txt
Earth Fund Grantee Agent Research/nginx/: nginx.conf
Earth Fund Grantee Agent Research/output/: research_report.md
Earth Fund Grantee Agent Research/src/: crew.py  main.py  models.py  prompts.py  report_generator.py  research_import.py  scoring.py  tools.py  tracing.py
Hot Science Research Agents/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  fly.toml  requirements.txt
Hot Science Research Agents/agents/: __init__.py
LLM Wiki Agents for Earth Fund/: .gitignore  CLAUDE.md  README.md
LLM Wiki Agents for Earth Fund/befkb/: .gitignore  KNOWN_ISSUES.md  README.md  pyproject.toml
LLM Wiki Agents for Earth Fund/befkb/src/befkb/: __init__.py  api.py  applicability.py  chunk.py  claims.py  cli.py  config.py  extract.py  graphstore.py  llm.py  models.py  pipeline.py  resolve.py  retrieve.py
LLM Wiki Agents for Earth Fund/befkb/src/befkb/ingest/: __init__.py  parser.py  pymupdf_parser.py  text_parser.py
LLM Wiki Agents for Earth Fund/befkb/tests/: test_applicability.py  test_chunk.py  test_claims.py  test_cli.py  test_concrete_parsers.py  test_graphstore.py  test_parser.py  test_pipeline.py  test_resolve.py  test_retrieve.py
Research Assistant Agent/: .env  requirements.txt
(+92 files in other folders)
