[project]
name = "befkb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "lancedb>=0.33.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-frontmatter>=1.3.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
befkb = "befkb.cli:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
